5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1613_2049.log
== TEST (2019-04-04 18:38:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("digite o numero"))
num2 = int(input("digite o numero"))
num3 = int(input("digite o numero"))
dividendo = num1
divisor = num2
quociente = dividendo/divisor
resto = dividendo%divisor
print("dividendo")
print("divisor")
print(int"quociente")
print(int("resto"))
-- ERROR:
File "XXXX", line 13
    print(int"quociente")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:38:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("digite o numero"))
num2 = int(input("digite o numero"))
num3 = int(input("digite o numero"))
dividendo = num1
divisor = num2
quociente = dividendo/divisor
resto = dividendo%divisor
print("dividendo")
print("divisor")
print(int"quociente")
print(int("resto"))
-- ERROR:
File "XXXX", line 13
    print(int"quociente")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:39:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("digite o numero"))
num2 = int(input("digite o numero"))
num3 = int(input("digite o numero"))
dividendo = num1
divisor = num2
quociente = dividendo/divisor
resto = dividendo%divisor
print(dividendo)
print(divisor)
print(int(quociente))
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num3 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:39:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("digite o numero"))
num2 = int(input("digite o numero"))
dividendo = num1
divisor = num2
quociente = dividendo/divisor
resto = dividendo%divisor
print(dividendo)
print(divisor)
print(int(quociente))
print(resto)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:39:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("digite o numero"))
num2 = int(input("digite o numero"))
dividendo = num1
divisor = num2
quociente = dividendo/divisor
resto = dividendo%divisor
print(dividendo)
print(divisor)
print(int(quociente))
print(resto)
-- EXECUTION TIME:
0.193636
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
